@@ -18,16 +18,16 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor Boston, MA 02110-1301,  USA
 
-
 import gobject
 import gtk
 
 import garmon
 from garmon.property_object import PropertyObject, gproperty
+from garmon.sensor import SensorProxyMixin, StateMixin, dtc_decode_mil
 
 
 
-class MILEntry(gtk.Entry):
+class MILEntry(gtk.Entry, PropertyObject):
     
     gproperty('on', bool, False)
     gproperty('on-color', str, '#F7D30D')
@@ -36,6 +36,8 @@ class MILEntry(gtk.Entry):
     def __init__(self):
         gtk.Entry.__init__(self, 3)
         PropertyObject.__init__(self)
+        self.set_text('MIL')
+        self.set_property('editable', False)
         
     def __post_init__(self):
         self.connect('notify::on', self._notify_cb)
@@ -48,4 +50,29 @@ class MILEntry(gtk.Entry):
         else:
             self.modify_base(gtk.STATE_NORMAL, gtk.gdk.color_parse(self.off_color))
     
-     
+
+class MILWidget(MILEntry, SensorProxyMixin,
+                          StateMixin,
+                          PropertyObject):
+                          
+    def __init__(self):
+        MILEntry.__init__(self)
+        SensorProxyMixin.__init__(self, '0101', 1)
+        
+                          
+    def _sensor_data_changed_cb(self, sensor, data):
+        on = self.sensor.metric_value == 'On'
+        self.on = on
+                          
+                          
+if __name__ == '__main__':
+    widget = MILWidget()
+    w = gtk.Window()
+    w.add(widget)
+    w.show_all()
+    widget.sensor.data = "82 07"
+    gtk.main()
+    
+    
+    
+                          
